Subiendo versión del dropbox... hay errores... no sé por qué... :S

--- a/evsim/nbproject/project (Copia en conflicto de alex malagon 2013-06-17).properties
+++ b/evsim/nbproject/project (Copia en conflicto de alex malagon 2013-06-17).properties
@@ -25,43 +25,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/evsim.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.gnujaxp.jar=lib\\gnujaxp.jar
-file.reference.iText-2.1.5.jar=lib\\iText-2.1.5.jar
-file.reference.jcommon-1.0.16.jar=lib\\jcommon-1.0.16.jar
-file.reference.jfreechart-1.0.13-experimental.jar=lib\\jfreechart-1.0.13-experimental.jar
-file.reference.jfreechart-1.0.13-swt.jar=lib\\jfreechart-1.0.13-swt.jar
-file.reference.jfreechart-1.0.13.jar=lib\\jfreechart-1.0.13.jar
-file.reference.jfreechart-1.0.14-demo.jar=lib\\jfreechart-1.0.14-demo.jar
-file.reference.junit.jar=lib\\junit.jar
-file.reference.jxl.jar=lib\\jxl.jar
-file.reference.mTeste.jar=lib\\mTeste.jar
-file.reference.servlet.jar=lib\\servlet.jar
-file.reference.swtgraphics2d.jar=lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gnujaxp.jar}:\
-    ${file.reference.iText-2.1.5.jar}:\
-    ${file.reference.jcommon-1.0.16.jar}:\
-    ${file.reference.jfreechart-1.0.13-experimental.jar}:\
-    ${file.reference.jfreechart-1.0.13-swt.jar}:\
-    ${file.reference.jfreechart-1.0.13.jar}:\
-    ${file.reference.junit.jar}:\
-    ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.gnujaxp.jar}:\
-    ${file.reference.iText-2.1.5.jar}:\
-    ${file.reference.jcommon-1.0.16.jar}:\
-    ${file.reference.jfreechart-1.0.13-experimental.jar}:\
-    ${file.reference.jfreechart-1.0.13-swt.jar}:\
-    ${file.reference.jfreechart-1.0.13.jar}:\
-    ${file.reference.jfreechart-1.0.14-demo.jar}:\
-    ${file.reference.junit.jar}:\
-    ${file.reference.jxl.jar}:\
-    ${file.reference.mTeste.jar}:\
-    ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${libs.jfreechart-1.0.14-demo.classpath}:\
+    ${libs.jfreecrchar.classpath}:\
+    ${libs.jopas.classpath}:\
+    ${libs.evsimMatlab.classpath}:\
+    ${libs.plot.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=Vista.Panel_Principal_1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -93,9 +65,9 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
+# Space-separated list of JVM arguments used when running the project
+# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
+# or test-sys-prop.name=value to set system properties for unit tests):
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
