--- a/evsim/nbproject/project.properties
+++ b/evsim/nbproject/project.properties
@@ -85,7 +85,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=Vista.Panel_Principal_1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
