--- a/evsim/nbproject/project.properties
+++ b/evsim/nbproject/project.properties
@@ -61,7 +61,8 @@ javac.classpath=\
     ${file.reference.jxl.jar}:\
     ${file.reference.mTeste.jar}:\
     ${file.reference.servlet.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${file.reference.swtgraphics2d.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
